Attempt to fix select-none on iOS

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+.select-none {
+  -webkit-user-select: none;
+  user-select: none;
+}
+
 ::view-transition-group(*) {
   animation-duration: 200ms;
   animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
